# hello-llm

./: README.md  main.py  openai-chat.py  pyproject.toml
src/hello_llm/: __init__.py  openai_chat.py
src/hello_llm/openai/: test_chat.py  test_structure_output.py
